spade-tests/src/snapshots/spade_tests__wal_tracing__wal_suffix_on_builtin_unit_is_error.snap
---
source: spade-tests/src/wal_tracing.rs
---
#[wal_suffix(suffix=__wal_suffix__)]
entity main(clk: clock, x: int<8>) -> int<8> __builtin__


error: wal_suffix is not allowed on __builtin__ units
  ┌─ testinput:1:1
  │
1 │ #[wal_suffix(suffix=__wal_suffix__)]
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Not allowed on __builtin__ units


